# kaitai2WxHexEditor.py

./: .editorconfig  .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  UNLICENSE  kaitai2WxHexEditor.py  pyproject.toml
.ci/: before.sh
